--- a/src/Components/Dashboard/TrackProduct/TrackProduct.css
+++ b/src/Components/Dashboard/TrackProduct/TrackProduct.css
@@ -7,8 +7,9 @@
 .track-product-shop-content {
   font-family: "Poppins", sans-serif;
   color: #002a47;
-  width: 70%;
+  width: 90%;
   margin: auto;
+  /* margin-top: 30px !important; */
 }
 .track-product-container h2 {
   width: 220px;
@@ -20,7 +21,7 @@
 }
 .shop-details {
   text-align: left;
-  margin: 10px 0px;
+  /* margin: 5px 0px; */
   display: flex;
 }
 .shop-details span {
@@ -79,14 +80,15 @@
 }
 
 .trackProduct-modal-content{
-  height: 44vh;
+  height: 40vh;
   text-align: center;
   font-family: "Poppins", sans-serif;
 }
 .trackProduct-modal-content h2{
-  margin-top: 250px;
+  margin-top: 350px;
   margin-bottom: 40px;
   font-family: "Poppins", sans-serif;
+  font-size: 40px;
   color: #002a47;
   font-weight: 600;
 
@@ -104,4 +106,46 @@
 .tracking-content{
   font-family: "Poppins", sans-serif;
   color: #002a47;
+}
+.tracking-content h1{
+  padding: 7px 0px;
+  margin-bottom: 40px;
+  border-image-slice: 1;
+  border-width: 1px;
+  border-image-source: linear-gradient(
+    to left,
+    rgba(0, 0, 0, 0),
+    #fa4319,
+    rgba(0, 0, 0, 0)
+  );
+  border-bottom: 2px solid #002a47;
+  font-weight: 600;
+  text-align: center;
+  font-size: 25px;
+}
+.tracking-content h2{
+  padding: 7px 0px;
+  margin-top: 50px;
+  border-image-slice: 1;
+  border-width: 1px;
+  border-image-source: linear-gradient(
+    to left,
+    rgba(0, 0, 0, 0),
+    #fa4319,
+    rgba(0, 0, 0, 0)
+  );
+  border-bottom: 2px solid #002a47;
+  font-weight: 500;
+  text-align: center;
+  font-size: 20px;
+}
+.trackingContents{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  font-size: 14px;
+}
+.trackingContents p{
+  border: .1px solid rgb(235, 235, 235);
+  padding: 10px ;
 }
