--- a/src/Components/SharedComponents/Nav/Nav.css
+++ b/src/Components/SharedComponents/Nav/Nav.css
@@ -97,7 +97,38 @@
 .login-link {
   color: #fff !important;
 }
+.afterLogin{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 2px solid #002a47;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  /* margin-left: 180px;
+  margin-right: 15px; */
+}
+.afterLogin img{
+  width: 40px;
+  margin-top: -8px;
+  padding: 0px;
+}
 
+.profile-dropdown{
+  margin-left: 80%;
+  text-align: left;
+  border-radius: none;
+}
+.profile-dropdown ul{
+  padding: 0;
+}
+.profile-dropdown li{
+  list-style: none;
+  padding: 0;
+  font-size: 14px;
+  font-weight: 200;
+  /* border-top: .1px solid gainsboro; */
+}
 /* Resposive css */
 @media screen and (max-width: 786px) {
   .topBar-container {
