--- a/src/Components/SharedComponents/Nav/Nav.css
+++ b/src/Components/SharedComponents/Nav/Nav.css
@@ -127,6 +127,7 @@
   padding: 0;
   font-size: 14px;
   font-weight: 200;
+  color: #979797 !important;
   /* border-top: .1px solid gainsboro; */
 }
 /* Resposive css */
