--- a/src/Components/Dashboard/TrackProduct/TrackProduct.css
+++ b/src/Components/Dashboard/TrackProduct/TrackProduct.css
@@ -62,12 +62,12 @@
   outline: none;
 }
 .track-parcel-input button {
-  /* border: none;
+  border: none;
   background: #002a47;
   color: aliceblue;
   margin-left: 20px;
   border-radius: 5px;
-  padding: 0px 20px; */
+  padding: 0px 20px;
 }
 
 .offers-content{
@@ -79,24 +79,34 @@
 
 }
 
+
+.trackProductShowDetail-section{
+  background: linear-gradient(#ffffff00, #ffffff00),
+    linear-gradient(#ffffff00, #ffffff00),
+    url(../../../assets/img/Frame\ 1000005149.png) center center fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
 .trackProduct-modal-content{
-  height: 40vh;
   text-align: center;
   font-family: "Poppins", sans-serif;
+  display: flex;
+  justify-content: center;
+  padding-top: 22%;
 }
 .trackProduct-modal-content h2{
-  margin-top: 350px;
-  margin-bottom: 40px;
   font-family: "Poppins", sans-serif;
   font-size: 40px;
   color: #002a47;
   font-weight: 600;
+  margin-bottom: 20px;
 
 }
 .trackProduct-modal-content button{
   border: none;
   border-radius: 5px;
-  padding: 12px 40px;
+  padding: 12px 60px;
   font-family: "Poppins", sans-serif;
   background: #002a47;
   color: #fff;
