--- a/src/Components/Faq/Faq.css
+++ b/src/Components/Faq/Faq.css
@@ -27,10 +27,35 @@
 
 }
 
+.faq-section input{
+
+  border-radius: 5px;
+}
 .ask-textarea textarea{
     width: 100%;
     height: 200px;
     border: .5px solid gainsboro;
     border-radius: 10px;
     padding: 20px;
+    outline: none;
+    font-size: 14px;
+}
+
+.faq-btns button{
+  border: none;
+  padding: 10px 100px;
+  border-radius: 5px;
+  margin: 10px 7px;
+  transition: all .3s;
+}
+.faq-btns button:hover{
+  background: #fa4319;
+}
+
+.faq-ans-container{
+  text-align: left;
+}
+.faq-ans-container .dropdown{
+  padding: 16px 0px !important;
+  border-bottom: .4px solid gainsboro;
 }
