--- a/src/Components/Header/Showcase/css/Carousel.css
+++ b/src/Components/Header/Showcase/css/Carousel.css
@@ -5,7 +5,7 @@
 }
 
 .carousel-indicators {
-  margin-left: 50%;
+  margin-left: 30%;
 }
 .carousel-indicators [data-bs-target] {
   border-radius: 50%;
@@ -35,7 +35,7 @@
   opacity: 0.2;
 }
 .carousel-caption {
-  
+  width: 40%;
   background: linear-gradient(
     to left,
     rgba(0, 0, 0, 0),
@@ -43,8 +43,8 @@
     rgba(0, 0, 0, 0)
   );
   bottom: 400px;
-  padding: 50px 20px;
-  margin-right: 200px;
+  padding: 70px 0px;
+  margin-left: 20px;
 }
 .carousel-caption h1 {
   font-weight: 600;
@@ -53,7 +53,7 @@
   color: #09273d;
 }
 .carousel-caption h1 span.text-color {
-  color: #FA4319;
+  color: #fa4319;
 }
 .carousel-caption p {
   font-weight: 400;
@@ -65,22 +65,89 @@
 }
 
 .carousel-control-prev {
-  margin-left: 82%;
+  margin-left: 75%;
   margin-top: 840px;
   background: #002a47;
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   border-radius: 50px;
 }
 .carousel-control-next {
   margin-top: 840px;
-  margin-right: 150px;
+  margin-right: 305px;
   background: #083a5e;
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   border-radius: 50px;
 }
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
   color: #fff;
+}
+@media screen and (max-width: 786px) {
+  .carousel-container {
+    height: 300px !important;
+    overflow: hidden;
+    margin-top: 90px;
+  }
+  .carousel-indicators {
+    margin: auto;
+  }
+  .carousel-indicators [data-bs-target] {
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    margin-top: 0px;
+  }
+  
+  .carousel-item {
+    min-height: 300px;
+    background: no-repeat scroll center scroll;
+    background-size: cover;
+    font-family: "Poppins", sans-serif;
+  }
+  .carousel-item img {
+    height: 300px;
+  }
+
+  .carousel-control-prev {
+    margin-left: 20px;
+    margin-top: 140px;
+    background: #002a47;
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+    padding: 7px;
+  }
+  .carousel-control-next {
+    margin-top: 140px;
+    margin-right: 20px;
+    background: #083a5e;
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+    padding: 7px;
+  }
+
+  .carousel-caption {
+    width: 300px;
+    background: linear-gradient(
+      to left,
+      rgba(0, 0, 0, 0),
+      rgba(230, 230, 230, 0.651),
+      rgba(0, 0, 0, 0)
+    );
+    bottom:   100px;
+    padding: 40px 0px;
+    margin-left: 10px;
+  }
+  .carousel-caption h1 {
+    font-weight: 600;
+    font-size: 25px;
+    text-align: center;
+    color: #09273d;
+  }
+  .carousel-caption p {
+    display: none;
+  }
 }
