--- a/src/Components/Home/DeliveryCalculator/DeliveryCalculator.css
+++ b/src/Components/Home/DeliveryCalculator/DeliveryCalculator.css
@@ -6,7 +6,7 @@
 .dc-before {
   width: 20px;
   height: 66px;
-  background: #FA4319;
+  background: #fa4319;
   position: absolute;
   margin-left: 460px;
   margin-top: -4px;
@@ -14,7 +14,7 @@
 .dc-after {
   width: 20px;
   height: 66px;
-  background: #FA4319;
+  background: #fa4319;
   position: absolute;
   margin-left: 815px;
   margin-top: -4px;
@@ -47,15 +47,18 @@
   border: 4px solid #002a47;
   display: flex;
 }
-.formdiv{
+.formdiv {
   width: 670px;
   padding: 40px 0px;
   margin-left: 300px;
   transition: all 1s;
 }
+.formdiv-container {
+  display: flex;
+}
 .calculator-form-container label {
   color: #002a47;
-  transition: all .6s;
+  transition: all 0.6s;
 }
 .calculator-form-container input,
 .calculator-form-container select {
@@ -68,11 +71,11 @@
   color: gray;
   font-weight: 200 !important;
   border-radius: 5px;
-  transition: all .6s;
+  transition: all 0.6s;
 }
 .form2 {
   margin-left: 30px;
-  transition: all .6s;
+  transition: all 0.6s;
 }
 .form2 button {
   border: none;
@@ -84,10 +87,10 @@
   transition: all 0.5s;
 }
 .form2 button:hover {
-  background: #FA4319;
+  background: #fa4319;
 }
 
-.take-service-container{
+.take-service-container {
   height: 505px;
   position: absolute;
   display: none;
@@ -99,23 +102,21 @@
   color: #002a47;
 }
 
-.planCategory{
+.planCategory {
   border-right: 2px solid #002a47;
   padding: 0px 30px;
   margin-top: 70px;
 }
-.costPerKg{
+.costPerKg {
   margin: 0px 30px;
   margin-top: 70px;
 }
-.haveToPay{
+.haveToPay {
   margin-top: 50px;
   text-align: center;
-  
 }
-.haveToPay h4{
+.haveToPay h4 {
   margin: 15px 0px;
-  
 }
 .take-service-container button {
   border: none;
@@ -123,12 +124,12 @@
   background: #002a47;
   color: #fff;
   border-radius: 5px;
-  margin-top: 15px ;
+  margin-top: 15px;
   margin-left: 110px;
   transition: all 0.5s;
 }
 .take-service-container button:hover {
-  background: #FA4319;
+  background: #fa4319;
 }
 
 .close-tab {
@@ -136,4 +137,57 @@
   float: right;
   font-size: 30px;
   color: #002a47;
+}
+
+@media screen and (max-width: 786px) {
+  .dc-before {
+    position: absolute;
+    margin-left: 42px;
+  }
+  .dc-after {
+    position: absolute;
+    margin-left: 397px;
+  }
+  .calculator-form-container {
+    margin-top: 40px;
+  }
+  .formdiv {
+    width: 355px;
+    /* height: 1000px; */
+    padding: 0px;
+    margin-left: 10px;
+    transition: all 1s;
+    margin: auto;
+  }
+  .formdiv-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .calculator-form-container input,
+  .calculator-form-container select {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0px;
+  }
+  .form2 {
+    margin-left: 0px;
+    transition: all 0.6s;
+  }
+
+  .take-service-container {
+    height: 505px;
+    position: absolute;
+    display: none;
+    margin-left: 10px;
+    margin-top: 540px;
+    padding: 40px 25px;
+    border: 10px solid #fa42197e;
+    background: #fc0b0b15;
+    color: #002a47;
+  }
+
+  /* .calculator-form-container{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  } */
 }
