--- a/src/Components/Home/PricingAndPlan/PricingAndPlan.css
+++ b/src/Components/Home/PricingAndPlan/PricingAndPlan.css
@@ -4,7 +4,7 @@
 .pp-before {
   width: 20px;
   height: 66px;
-  background: #FA4319;
+  background: #fa4319;
   position: absolute;
   margin-left: 490px;
   margin-top: -4px;
@@ -12,7 +12,7 @@
 .pp-after {
   width: 20px;
   height: 66px;
-  background: #FA4319;
+  background: #fa4319;
   position: absolute;
   margin-left: 786px;
   margin-top: -4px;
@@ -37,7 +37,7 @@
   margin-top: 20px;
   font-family: "Poppins", sans-serif;
   background: linear-gradient(#c5d3dd85, #c5d3dd85),
-  linear-gradient(#c5d3dd85, #c5d3dd85),
+    linear-gradient(#c5d3dd85, #c5d3dd85),
     url(../../../assets/img/service-bg.png) center center fixed;
   /* background-attachment: fixed; */
   background-repeat: no-repeat;
@@ -49,7 +49,7 @@
 .basic,
 .standard,
 .premium {
-  border: 10px solid #FA4319;
+  border: 10px solid #fa4319;
   width: 125px;
   height: 200px;
   margin: auto;
@@ -163,4 +163,67 @@
   position: absolute;
   margin-top: -130px;
   margin-left: 400px;
+}
+
+@media screen and (max-width: 786px) {
+  .pp-before {
+    position: absolute;
+    margin-left: 72px;
+  }
+  .pp-after {
+    position: absolute;
+    margin-left: 367px;
+  }
+
+  .basic,
+  .standard,
+  .premium {
+    width: 160px;
+    margin-bottom: 20px !important;
+    margin: auto !important ;
+    border: 7px solid #fa4319;
+    /* border-radius: 5px; */
+  }
+
+  .basic-container,
+  .standard-container,
+  .premium-container {
+    margin-left: -150px;
+    margin-top: 25px;
+  }
+  .basic-container-border1,
+  .premium-container-border2 {
+    display: none;
+  }
+
+  .basic-back-view,
+  .standard-back-view,
+  .premium-back-view {
+    height: 132px;
+    font-size: 12px;
+  }
+  .basic-front-view,
+  .standard-front-view,
+  .premium-front-view {
+    width: 250px;
+    padding: 13px 0px;
+  }
+  .basic:hover .basic-front-view {
+    margin-left: -5px;
+  }
+  .basic:hover .basic-back-view {
+    margin-left: 240px;
+  }
+  .premium:hover .premium-front-view {
+    margin-left: -5px;
+  }
+  .premium:hover .premium-back-view {
+    margin-left: 240px;
+  }
+  .standard:hover .standard-front-view {
+    margin-left: -5px;
+  }
+  .standard:hover .standard-back-view {
+    margin-left: 240px;
+  }
 }
